@@ -1,3 +1,10 @@
+2011-06-14  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/frames.jl: add an option to control the titlebar
+	text position
+
+	* themes/StyleTab/theme.jl: set title-x offsets so that
+	update-text-position works properly with StyleTab
+
 2011-06-13  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* themes/get-S-tabbed/
 	* themes/brushed-metal/
